--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
 	<title>Vinay</title>
   <meta property="og:title" content="Vinay">
-  <meta name="keywords" content="Vinay, Vinay Sanjayan, S.Vinay, BOT Developer, Discord , Web Developer,QuantX,QuantX Bot,QuantX Bot developer,abi24.tech,Vinay,SA,Scammer Alert,discord.gg/scammeralert,swift modertaor,swift mod,moderator,srilanka,colombo,developer,python">
+  <meta name="keywords" content="Vinay, Vinay, S.Vinay, BOT Developer, Discord , Web Developer">
 	<meta name="og:description" content="Discord BOT Developer">
-  <meta property="og:image" content="https://images-ext-1.discordapp.net/external/7ytLIZWJUNB2DsZBDTsHIRtU57p5l4p0bCAwf3h0Yqc/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/796943270839451648/a_d464451856bae7a4da2a482113aef538.gif">
+  <meta property="og:image" content="https://i.guns.lol/2HGM3.png">
   <meta name="twitter:card" content="summary">
   
 
